--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,8 @@
-* {
-    padding: 0;
-    margin: 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import 'mixins';
+@import 'reset';
+@import 'colors';
+@import 'header';
+@import 'menu';
+@import 'main';
+@import 'task-list';
